fix: remove overflow-hidden on body and html

--- a/apps/ng-apps-resume/src/styles.scss
+++ b/apps/ng-apps-resume/src/styles.scss
@@ -12,11 +12,7 @@
 
 @mixin scrolling-defaults {
     html {
-        overflow-x: hidden;
         scroll-behavior: smooth;
-    }
-    body {
-        overflow-x: hidden;
     }
 }
 
